Fix TOC overflow in Migration Guides (#1171)

--- a/sass/components/_on-this-page.scss
+++ b/sass/components/_on-this-page.scss
@@ -31,6 +31,7 @@
     // copied from .media-content
     text-decoration: none;
     color: $link-color;
+    word-break: break-word;
 
     &:hover {
       text-shadow: 0 0 0.9px $link-hover-shadow-color, 0 0 0.9px $link-hover-shadow-color;
