--- a/sass/components/_tree-menu.scss
+++ b/sass/components/_tree-menu.scss
@@ -23,7 +23,7 @@
 
     &__label {
         display: grid;
-        grid-template-columns: auto min-content;
+        grid-template-columns: 1fr min-content;
         border-radius: $border-radius;
         overflow: hidden; // prevent the radii from getting messed up
         margin-bottom: 2px;
